--- a/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
@@ -22,12 +22,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\components\members-grid\member.ts" />
     <None Remove="ClientApp\app\components\members-grid\members-grid.component.ts" />
     <None Remove="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
     <None Remove="ClientApp\app\components\shared\star.component.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\components\members-grid\member.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members-grid.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\star.component.ts" />
