Adding progress bar
Adding progress bar
Folder structure for conrtols

--- a/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
@@ -25,8 +25,10 @@
     <None Remove="ClientApp\app\components\Invitation\invitation.component.ts" />
     <None Remove="ClientApp\app\components\members-grid\member.ts" />
     <None Remove="ClientApp\app\components\members-grid\members-grid.component.ts" />
+    <None Remove="ClientApp\app\components\members-grid\members-modal-content.ts" />
     <None Remove="ClientApp\app\components\members-grid\members.service.ts" />
     <None Remove="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
+    <None Remove="ClientApp\app\components\shared\progress\progress.component.ts" />
     <None Remove="ClientApp\app\components\shared\star.component.ts" />
   </ItemGroup>
 
@@ -40,9 +42,11 @@
     <TypeScriptCompile Include="ClientApp\app\components\Invitation\invitation.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\member.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members-grid.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\members-grid\members-modal-content.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
-    <TypeScriptCompile Include="ClientApp\app\components\shared\star.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\shared\progress\progress.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\shared\star-rating\star.component.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
