Adding new controls Badge, Lable
 - Adding new controls Badge, Lable
- Bootstrap 4 added

--- a/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
+++ b/AngularWithCore2Demo/AngularWithCore2Demo/AngularWithCore2Demo.csproj
@@ -27,7 +27,9 @@
     <None Remove="ClientApp\app\components\members-grid\members-grid.component.ts" />
     <None Remove="ClientApp\app\components\members-grid\members-modal-content.ts" />
     <None Remove="ClientApp\app\components\members-grid\members.service.ts" />
+    <None Remove="ClientApp\app\components\shared\badge\badge.component.ts" />
     <None Remove="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
+    <None Remove="ClientApp\app\components\shared\Label\label.component.ts" />
     <None Remove="ClientApp\app\components\shared\progress\progress.component.ts" />
     <None Remove="ClientApp\app\components\shared\star.component.ts" />
   </ItemGroup>
@@ -44,9 +46,15 @@
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members-grid.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members-modal-content.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\members-grid\members.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\shared\badge\badge.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\convertToCaps.pipe.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\shared\Label\label.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\progress\progress.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\shared\star-rating\star.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\app\components\shared\Lookup\" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
