Ignore file updated
Ignore file updated

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ AngularWithCore2Demo/.vs/AngularWithCore2Demo/DesignTimeBuild/.dtbcache
 *.ide
 *.ide-shm
 *.ide-wal
+AngularWithCore2Demo/.vs/AngularWithCore2Demo/v15/Server/sqlite3/storage.ide
+AngularWithCore2Demo/.vs/AngularWithCore2Demo/v15/Server/sqlite3/storage.ide
+AngularWithCore2Demo/.vs/AngularWithCore2Demo/v15/Server/sqlite3/storage.ide-shm
+AngularWithCore2Demo/.vs/AngularWithCore2Demo/v15/Server/sqlite3/storage.ide-wal
