--- a/AngularWithCore2Demo/Empty-coreui/CoreUI-Empty-Template.csproj
+++ b/AngularWithCore2Demo/Empty-coreui/CoreUI-Empty-Template.csproj
@@ -6,11 +6,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="src\app\views\grid\star-rating\star.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="src\app\views\grid\contact-lookup\" />
+    <Folder Include="src\app\views\grid\county-flag\" />
+    <Folder Include="src\app\views\grid\lookup\" />
+    <Folder Include="src\app\views\grid\progress\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="src\app\views\grid\star-rating\star.component.ts" />
   </ItemGroup>
 
 </Project>
